--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,8 +3,10 @@ FROM node:lts-buster
 RUN apt-get update
 
 # Install service
-COPY . /app
-WORKDIR /app
-RUN npm install
+COPY . /appl
+WORKDIR /app/client/
+RUN npm install 
+WORKDIR /app/
+RUN npm instal
 EXPOSE 3000
 CMD ["sh", "run.sh"]
