--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,7 @@
     "start": "node server --scripts-prepend-node-path",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\" --disableHostCheck=true"
   },
   "author": "",
   "license": "ISC",
